--- a/intex.html
+++ b/intex.html
@@ -4,16 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Table</title>
+    <style>
+        table,th,td
+        {
+            border: solid magenta;
+        }
+    </style>
 </head>
 <body>
     <table>
-        <th>Student Name</th>
-        <tr></tr>
-
-
-
-
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Register Number</th>
+                <th>Email Id</th>
+                <th>phone Number</th>
+            </tr>
+        </thead>
+        <tabody>
+            <tr>
+                <td>aaaaa</td>
+                <td>Keelapavoor</td>
+                <td>13570</td>
+                <td>abc@gmail.com</td>
+                <td>98072405053</td>
+            </tr>
+            <tr>
+                <td>bbbbb</td>
+                <td>Keelapavoor</td>
+                <td>13570</td>
+                <td>abc@gmail.com</td>
+                <td>98072405053</td>
+            </tr>
+            <tr>
+                <td>ccccc</td>
+                <td>Keelapavoor</td>
+                <td>13570</td>
+                <td>abc@gmail.com</td>
+                <td>98072405053</td>
+            </tr>
+            <tr>
+                <td>ddddd</td>
+                <td>Keelapavoor</td>
+                <td>13570</td>
+                <td>abc@gmail.com</td>
+                <td>98072405053</td>
+            </tr>
+            <tr>
+                <td>eeeee</td>
+                <td>Keelapavoor</td>
+                <td>13570</td>
+                <td>abc@gmail.com</td>
+                <td>98072405053</td>
+            </tr>
+        </tabody>
+        <tr>
+            <tfoot>
+                <td>This is Student Details</td>
+            </tfoot>
+            
+        </tr>
     </table>
 </body>
 </html>
